--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "gitswitcher",
-  "version": "2.0.0",
+  "version": "2.0.1",
   "description": "Program that helps you switch between your GitHub, GitLab & Bitbucket accounts.",
   "main": "dist/index.js",
   "scripts": {
@@ -21,12 +21,14 @@
   "author": "Denis Yasyuchenya ZNN",
   "license": "ISC",
   "dependencies": {
-    "better-sqlite3": "^11.1.2",
-    "validator": "^13.12.0",
-    "typescript": "^5.5.4",
+    "@types/better-sqlite3": "^7.6.11",
     "@types/node": "^22.4.1",
+    "@types/readline-sync": "^1.4.8",
     "@types/validator": "^13.12.0",
-    "@types/better-sqlite3": "^7.6.11"
+    "better-sqlite3": "^11.1.2",
+    "readline-sync": "^1.4.10",
+    "typescript": "^5.5.4",
+    "validator": "^13.12.0"
   },
   "devDependencies": {
     "ts-node": "^10.9.2"
